[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dialog/assets/CAJA TEXTO DERECHApng.png" type="Texture" id=1]
[ext_resource path="res://Dialog/assets/Player-dia.png" type="Texture" id=2]
[ext_resource path="res://Dialog/assets/Tardi-dia.png" type="Texture" id=3]
[ext_resource path="res://Dialog/dialog.tres" type="Theme" id=4]
[ext_resource path="res://Dialog/Dialog.gd" type="Script" id=5]
[ext_resource path="res://Dialog/assets/CAJA TEXTO IZQUIERDA.png" type="Texture" id=6]

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_right" type="TextureRect" parent="."]
visible = false
margin_left = 232.551
margin_top = 885.77
margin_right = 1711.55
margin_bottom = 1032.77
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_left" type="TextureRect" parent="."]
margin_left = 218.265
margin_top = 887.357
margin_right = 1718.26
margin_bottom = 1035.36
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_box" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_portrait" type="TextureRect" parent="text_box"]
margin_left = 111.673
margin_top = 806.618
margin_right = 411.673
margin_bottom = 1106.62
rect_min_size = Vector2( 300, 300 )
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="text_box"]
margin_left = 407.0
margin_top = 900.0
margin_right = 1520.0
margin_bottom = 1001.0
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0.207843, 0.239216, 0.333333, 1 )
text = "Prueba de texto"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_portrait" type="TextureRect" parent="text_box"]
visible = false
margin_left = 1565.31
margin_top = 806.618
margin_right = 1865.31
margin_bottom = 1106.62
rect_min_size = Vector2( 300, 300 )
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Dialog_gui_input"]
